# connectlife-ha

./: Dockerfile
.github/workflows/: publish-ghcr.yaml  publish-mcp-server-ghcr.yaml
mcp_server/: .dockerignore  README.md  pyproject.toml
mcp_server/src/connectlife_mcp/: __main__.py  server.py  session.py
mcp_server/src/connectlife_mcp/tools/: auth.py  commands.py  devices.py
