[project]
name = "connectlife-mcp-server"
version = "0.1.0"
description = "Standalone MCP server for ConnectLife smart appliances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.0",
    "connectlife>=0.7.1",
]

[project.scripts]
connectlife-mcp = "connectlife_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectlife_mcp"]
